Bug 492824 - Missing edit-image icon in Oxygen
Summary: Missing edit-image icon in Oxygen
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.08.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-08 16:27 UTC by Michal Kec (MiK)
Modified: 2024-09-10 07:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Compare Skanlite toolbars with Breeze and Oxygen iconsets (233.93 KB, image/png)
2024-09-08 16:27 UTC, Michal Kec (MiK)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Kec (MiK) 2024-09-08 16:27:15 UTC
Created attachment 173448 [details]
Compare Skanlite toolbars with Breeze and Oxygen iconsets

SUMMARY
While using Oxygen iconset, Skanlite is missing several icons since switching to Plasma 6.

STEPS TO REPRODUCE
1. Enable Oxygen iconset in the System Settings
2. Invoke Skanlite to capture rectangle screen area
3. See the toolbar icons

OBSERVED RESULT
Several icons are missing and replaced by the text labels. Moreover these text labels are cut and incomplete.

EXPECTED RESULT
Skanlite either provides own icons, or substitute missing icons from Breeze iconset.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.0
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-40-generic (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5700X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B450 AORUS PRO
Comment 1 Michal Kec (MiK) 2024-09-08 16:30:28 UTC
Oh, that's Spectacle, not Skanlite. :)
Comment 2 Noah Davis 2024-09-10 05:37:03 UTC
The issue here is that Oxygen does not have an edit-image icon. Oxygen is probably unlikely to ever get the icon, but if someone wanted to add the icon, it could happen.
Comment 3 Noah Davis 2024-09-10 05:40:50 UTC
Oh I missed that you were asking for fallback icons. That's something Spectacle could do, so I suppose I will move the report back.
Comment 4 Bug Janitor Service 2024-09-10 05:46:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/399
Comment 5 Noah Davis 2024-09-10 07:01:22 UTC
Git commit a97962e6d06856901d43c1744778ba0cf3e140ec by Noah Davis.
Committed on 10/09/2024 at 06:58.
Pushed by ndavis into branch 'master'.

Set fallback icon theme

M  +2    -0    src/Main.cpp

https://invent.kde.org/graphics/spectacle/-/commit/a97962e6d06856901d43c1744778ba0cf3e140ec
Comment 6 Noah Davis 2024-09-10 07:01:41 UTC
Git commit 401c34ce457514cd94eadd5983de942f2c5aefc1 by Noah Davis.
Committed on 10/09/2024 at 07:01.
Pushed by ndavis into branch 'release/24.08'.

Set fallback icon theme

(cherry picked from commit a97962e6d06856901d43c1744778ba0cf3e140ec)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +2    -0    src/Main.cpp

https://invent.kde.org/graphics/spectacle/-/commit/401c34ce457514cd94eadd5983de942f2c5aefc1