Set fallback icon theme

BUG: 492824